fix world loading by updating world referencing variable